--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.samples.javaee</groupId>
   <artifactId>richfaces-jms-sample</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <properties>
-    <openliberty.maven.version>3.5.1</openliberty.maven.version>
-    <maven.compiler.target>11</maven.compiler.target>
-    <failOnMissingWebXml>false</failOnMissingWebXml>
-    <jaeger.client.version>1.5.0</jaeger.client.version>
-    <slf4j.jdk.version>1.7.30</slf4j.jdk.version>
-    <maven.compiler.source>11</maven.compiler.source>
     <final.name>richfaces-jms-sample</final.name>
-    <slf4j.api.version>1.7.30</slf4j.api.version>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
+    <openliberty.maven.version>3.10</openliberty.maven.version>
+    <lombok.version>1.18.30</lombok.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
+    <jakarta.jakartaee-api.version>9.0.0</jakarta.jakartaee-api.version>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.eclipse.microprofile</groupId>
-      <artifactId>microprofile</artifactId>
-      <version>4.0.1</version>
-      <type>pom</type>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-api</artifactId>
+      <version>${jakarta.jakartaee-api.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
     </dependency>
   </dependencies>
   <build>
     <finalName>richfaces-jms-sample</finalName>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.11.0</version>
+          <configuration>
+            <compilerArgs>
+              <arg>-Xlint:unchecked</arg>
+            </compilerArgs>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+              </path>
+              <!-- This is needed when using Lombok 1.18.16 and above -->
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-mapstruct-binding</artifactId>
+                <version>0.2.0</version>
+              </path>
+              <path>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
   <profiles>
     <profile>
@@ -35,14 +80,33 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>${maven-war-plugin.version}</version>
+              <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>io.openliberty.tools</groupId>
+              <artifactId>liberty-maven-plugin</artifactId>
+              <version>${openliberty.maven.version}</version>
+              <configuration>
+                <include>runnable</include>
+                <serverName>${final.name}</serverName>
+                <serverStartTimeout>60</serverStartTimeout>
+                <bootstrapProperties>
+                  <project.name>${final.name}</project.name>
+                  <app.context.root>/</app.context.root>
+                  <app.faces.stage>Development</app.faces.stage>
+                </bootstrapProperties>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
         <plugins>
-          <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>3.3.2</version>
-            <configuration>
-              <failOnMissingWebXml>false</failOnMissingWebXml>
-            </configuration>
-          </plugin>
           <plugin>
             <groupId>io.openliberty.tools</groupId>
             <artifactId>liberty-maven-plugin</artifactId>
@@ -62,35 +126,9 @@
                 </configuration>
               </execution>
             </executions>
-            <configuration>
-              <include>runnable</include>
-              <serverName>${final.name}</serverName>
-              <bootstrapProperties>
-                <project.name>${final.name}</project.name>
-                <jwt.issuer>https://server.example.com</jwt.issuer>
-                <app.context.root>/</app.context.root>
-              </bootstrapProperties>
-            </configuration>
           </plugin>
         </plugins>
       </build>
-      <dependencies>
-        <dependency>
-          <groupId>io.jaegertracing</groupId>
-          <artifactId>jaeger-client</artifactId>
-          <version>${jaeger.client.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>${slf4j.api.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-jdk14</artifactId>
-          <version>${slf4j.jdk.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
   </profiles>
 </project>
