Add BootsFaces Sample

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
       <artifactId>bootsfaces</artifactId>
       <version>${bootsfaces.version}</version>
       <classifier>jakarta</classifier>
+      <exclusions>
+        <exclusion>
+          <groupId>jakarta.el</groupId>
+          <artifactId>jakarta.el-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>jakarta.faces</groupId>
+          <artifactId>jakarta.faces-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>jakarta.platform</groupId>
