--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+  <context-param>
+    <param-name>BootsFaces_THEME</param-name>
+    <param-value>slate</param-value>
+  </context-param>
+  <!-- The BootsFaces_USETHEME context-param controls the loading of the bootstrap-theme.css -->
+  <!-- The default is false, when set to true the bootstrap-theme.css will be loaded -->
+  <context-param>
+    <param-name>BootsFaces_USETHEME</param-name>
+    <param-value>true</param-value>
+  </context-param>
+  <context-param>
+    <param-name>net.bootsfaces.get_jquery_from_cdn</param-name>
+    <param-value>false</param-value>
+  </context-param>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
