--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <activemq.version>6.0.1</activemq.version>
     <bootsfaces.version>1.6.0-SNAPSHOT</bootsfaces.version>
   </properties>
+  <!-- BootsFaces only supports Jakarta EE with a SNAPSHOT version -->
   <repositories>
     <repository>
       <id>oss.sonatype.org-snapshot</id>
