--- a/pom.xml
+++ b/pom.xml
@@ -6,208 +6,12 @@
   <groupId>de.samples.javaee</groupId>
   <artifactId>richfaces-jms-sample</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <properties>
-    <final.name>richfaces-jms-sample</final.name>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
-    <openliberty.maven.version>3.10</openliberty.maven.version>
-    <openliberty.config.directory>src/main/liberty</openliberty.config.directory>
-    <openliberty.shared.resources.dir>${project.build.directory}/liberty/wlp/usr/shared/resources
-    </openliberty.shared.resources.dir>
-    <lombok.version>1.18.30</lombok.version>
-    <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <jakarta.api.version>9.0.0</jakarta.api.version>
-    <jakarta.faces.stage>Development</jakarta.faces.stage>
-    <activemq.artifactId>activemq-rar</activemq.artifactId>
-    <activemq.version>6.0.1</activemq.version>
-    <bootsfaces.version>1.6.0-SNAPSHOT</bootsfaces.version>
   </properties>
-  <!-- BootsFaces only supports Jakarta EE with a SNAPSHOT version -->
-  <repositories>
-    <repository>
-      <id>oss.sonatype.org-snapshot</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>net.bootsfaces</groupId>
-      <artifactId>bootsfaces</artifactId>
-      <version>${bootsfaces.version}</version>
-      <classifier>jakarta</classifier>
-      <exclusions>
-        <exclusion>
-          <groupId>jakarta.el</groupId>
-          <artifactId>jakarta.el-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>jakarta.faces</groupId>
-          <artifactId>jakarta.faces-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.platform</groupId>
-      <artifactId>jakarta.jakartaee-api</artifactId>
-      <version>${jakarta.api.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>${lombok.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>${activemq.artifactId}</artifactId>
-      <version>${activemq.version}</version>
-      <type>rar</type>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>${final.name}</finalName>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.11.0</version>
-          <configuration>
-            <compilerArgs>
-              <arg>-Xlint:unchecked</arg>
-            </compilerArgs>
-            <annotationProcessorPaths>
-              <path>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-              </path>
-              <!-- This is needed when using Lombok 1.18.16 and above -->
-              <path>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-mapstruct-binding</artifactId>
-                <version>0.2.0</version>
-              </path>
-              <path>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-processor</artifactId>
-                <version>${mapstruct.version}</version>
-              </path>
-            </annotationProcessorPaths>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
-          <groupId>io.openliberty.tools</groupId>
-          <artifactId>liberty-maven-plugin</artifactId>
-          <version>${openliberty.maven.version}</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  <profiles>
-    <profile>
-      <id>liberty</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <artifactId>maven-war-plugin</artifactId>
-              <version>${maven-war-plugin.version}</version>
-              <configuration>
-                <failOnMissingWebXml>false</failOnMissingWebXml>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>io.openliberty.tools</groupId>
-              <artifactId>liberty-maven-plugin</artifactId>
-              <version>${openliberty.maven.version}</version>
-              <configuration>
-                <include>runnable</include>
-                <serverXmlFile>${openliberty.config.directory}/server.xml</serverXmlFile>
-                <serverEnvFile>${openliberty.config.directory}/server.env</serverEnvFile>
-                <serverName>${final.name}</serverName>
-                <serverStartTimeout>60</serverStartTimeout>
-                <bootstrapProperties>
-                  <project.name>${final.name}</project.name>
-                  <app.context.root>/</app.context.root>
-                  <app.faces.stage>${jakarta.faces.stage}</app.faces.stage>
-                  <activemq.driver.file>
-                    ${settings.localRepository}/org/apache/activemq/${activemq.artifactId}/${activemq.version}/${activemq.artifactId}-${activemq.version}.rar
-                  </activemq.driver.file>
-                </bootstrapProperties>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-        <!-- Lifecycle Binding -->
-        <plugins>
-          <plugin>
-            <groupId>io.openliberty.tools</groupId>
-            <artifactId>liberty-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>package-server</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>create</goal>
-                  <goal>install-feature</goal>
-                  <goal>deploy</goal>
-                  <goal>package</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>target/wlp-package</outputDirectory>
-                  <bootstrapProperties>
-                    <activemq.driver.file>${openliberty.shared.resources.dir}/${activemq.artifactId}-${activemq.version}.rar
-                    </activemq.driver.file>
-                  </bootstrapProperties>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- - - - - - - copy AMQ resource adapter to shared resources - - - -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>copy-amq-rar</id>
-                <phase>prepare-package</phase>
-                <goals>
-                  <goal>copy-dependencies</goal>
-                </goals>
-                <configuration>
-                  <includeArtifactIds>${activemq.artifactId}</includeArtifactIds>
-                  <outputDirectory>${openliberty.shared.resources.dir}</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+  <modules>
+    <module>producer-jsf</module>
+    <module>consumer</module>
+  </modules>
 </project>
